[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = ""
license = "Apache-2.0"
name = "mingshe"
readme = "README.md"
version = "0.4.0"

homepage = "https://github.com/abersheeran/mingshe"
repository = "https://github.com/abersheeran/mingshe"

classifiers = [
  "Programming Language :: Python :: 3",
]

packages = [
  {include = "mingshe"},
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "*"

pytest = "^5.4.3"

[tool.poetry.scripts]
mingshe = 'mingshe.commands:main'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
